--- a/index.css
+++ b/index.css
@@ -62,6 +62,16 @@
   align-self: center;
   object-fit: cover;
 }
+.home-hero1 {
+  width: 100%;
+  display: flex;
+  padding: var(--dl-space-space-threeunits);
+  max-width: var(--dl-size-size-maxwidth);
+  min-height: 80vh;
+  align-items: center;
+  flex-direction: row;
+  justify-content: space-between;
+}
 .home-container2 {
   margin: var(--dl-space-space-unit);
   display: flex;
@@ -142,6 +152,9 @@
     width: 80%;
     height: 90%;
   }
+  .home-hero1 {
+    flex-direction: column;
+  }
   .home-container2 {
     align-items: center;
     margin-right: 0px;
@@ -173,6 +186,10 @@
     padding-left: var(--dl-space-space-twounits);
     padding-right: var(--dl-space-space-twounits);
   }
+  .home-container1 {
+    margin-right: var(--dl-space-space-unit);
+    padding-right: var(--dl-space-space-unit);
+  }
   .home-text {
     color: #243e90;
     font-size: 2rem;
@@ -181,6 +198,15 @@
   .home-image1 {
     width: 80%;
     height: 90%;
+  }
+  .home-hero1 {
+    align-self: flex-start;
+    padding-left: var(--dl-space-space-twounits);
+    padding-right: var(--dl-space-space-twounits);
+  }
+  .home-container2 {
+    margin-right: var(--dl-space-space-unit);
+    padding-right: var(--dl-space-space-unit);
   }
   .home-text1 {
     color: #243e90;
@@ -209,11 +235,14 @@
     height: 21px;
   }
   .home-hero {
-    height: 1198px;
+    width: 100%;
+    height: auto;
+    max-width: var(--dl-size-size-maxwidth);
+    min-height: var(--dl-size-size-large);
     padding-top: var(--dl-space-space-twounits);
     padding-left: var(--dl-space-space-unit);
     padding-right: var(--dl-space-space-unit);
-    padding-bottom: 13px;
+    padding-bottom: var(--dl-space-space-twounits);
   }
   .home-container1 {
     margin: var(--dl-space-space-unit);
@@ -229,6 +258,13 @@
     height: 90%;
     margin-top: var(--dl-space-space-unit);
     margin-bottom: var(--dl-space-space-unit);
+  }
+  .home-hero1 {
+    min-height: var(--dl-size-size-medium);
+    padding-top: var(--dl-space-space-twounits);
+    padding-left: var(--dl-space-space-unit);
+    padding-right: var(--dl-space-space-unit);
+    padding-bottom: var(--dl-space-space-twounits);
   }
   .home-container2 {
     margin: var(--dl-space-space-unit);
