--- a/index.css
+++ b/index.css
@@ -96,6 +96,74 @@
   align-self: center;
   object-fit: cover;
 }
+.home-hero2 {
+  width: 100%;
+  display: flex;
+  padding: var(--dl-space-space-threeunits);
+  max-width: var(--dl-size-size-maxwidth);
+  min-height: 80vh;
+  align-items: center;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.home-container3 {
+  margin: var(--dl-space-space-unit);
+  display: flex;
+  align-self: center;
+  padding-top: var(--dl-space-space-unit);
+  border-color: #243e90;
+  border-width: 1px;
+  padding-left: var(--dl-space-space-unit);
+  padding-right: var(--dl-space-space-unit);
+  flex-direction: column;
+  padding-bottom: var(--dl-space-space-unit);
+}
+.home-text2 {
+  color: #243e90;
+  font-size: 2rem;
+  max-width: 450px;
+  align-self: center;
+}
+.home-image3 {
+  width: 80%;
+  height: 90%;
+  align-self: center;
+  object-fit: cover;
+}
+.home-hero3 {
+  width: 100%;
+  display: flex;
+  padding: var(--dl-space-space-threeunits);
+  max-width: var(--dl-size-size-maxwidth);
+  min-height: 80vh;
+  align-items: center;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.home-container4 {
+  margin: var(--dl-space-space-unit);
+  display: flex;
+  align-self: center;
+  padding-top: var(--dl-space-space-unit);
+  border-color: #243e90;
+  border-width: 1px;
+  padding-left: var(--dl-space-space-unit);
+  padding-right: var(--dl-space-space-unit);
+  flex-direction: column;
+  padding-bottom: var(--dl-space-space-unit);
+}
+.home-text3 {
+  color: #243e90;
+  font-size: 2rem;
+  max-width: 450px;
+  align-self: center;
+}
+.home-image4 {
+  width: 80%;
+  height: 90%;
+  align-self: center;
+  object-fit: cover;
+}
 .home-footer {
   width: 100%;
   display: flex;
@@ -110,7 +178,7 @@
   padding-bottom: var(--dl-space-space-twounits);
   justify-content: space-between;
 }
-.home-image3 {
+.home-image5 {
   top: 0px;
   left: 0px;
   right: 0px;
@@ -170,6 +238,42 @@
     width: 80%;
     height: 90%;
   }
+  .home-hero2 {
+    flex-direction: column;
+  }
+  .home-container3 {
+    align-items: center;
+    margin-right: 0px;
+    margin-bottom: var(--dl-space-space-twounits);
+    padding-right: 0px;
+  }
+  .home-text2 {
+    color: #243e90;
+    font-size: 2rem;
+    text-align: center;
+  }
+  .home-image3 {
+    width: 80%;
+    height: 90%;
+  }
+  .home-hero3 {
+    flex-direction: column;
+  }
+  .home-container4 {
+    align-items: center;
+    margin-right: 0px;
+    margin-bottom: var(--dl-space-space-twounits);
+    padding-right: 0px;
+  }
+  .home-text3 {
+    color: #243e90;
+    font-size: 2rem;
+    text-align: center;
+  }
+  .home-image4 {
+    width: 80%;
+    height: 90%;
+  }
 }
 @media(max-width: 767px) {
   .home-header {
@@ -213,6 +317,40 @@
     font-size: 2rem;
   }
   .home-image2 {
+    width: 80%;
+    height: 90%;
+  }
+  .home-hero2 {
+    align-self: flex-start;
+    padding-left: var(--dl-space-space-twounits);
+    padding-right: var(--dl-space-space-twounits);
+  }
+  .home-container3 {
+    margin-right: var(--dl-space-space-unit);
+    padding-right: var(--dl-space-space-unit);
+  }
+  .home-text2 {
+    color: #243e90;
+    font-size: 2rem;
+  }
+  .home-image3 {
+    width: 80%;
+    height: 90%;
+  }
+  .home-hero3 {
+    align-self: flex-start;
+    padding-left: var(--dl-space-space-twounits);
+    padding-right: var(--dl-space-space-twounits);
+  }
+  .home-container4 {
+    margin-right: var(--dl-space-space-unit);
+    padding-right: var(--dl-space-space-unit);
+  }
+  .home-text3 {
+    color: #243e90;
+    font-size: 2rem;
+  }
+  .home-image4 {
     width: 80%;
     height: 90%;
   }
@@ -282,12 +420,58 @@
     margin-top: var(--dl-space-space-unit);
     margin-bottom: var(--dl-space-space-unit);
   }
+  .home-hero2 {
+    min-height: var(--dl-size-size-medium);
+    padding-top: var(--dl-space-space-twounits);
+    padding-left: var(--dl-space-space-unit);
+    padding-right: var(--dl-space-space-unit);
+    padding-bottom: var(--dl-space-space-twounits);
+  }
+  .home-container3 {
+    margin: var(--dl-space-space-unit);
+    padding: var(--dl-space-space-unit);
+  }
+  .home-text2 {
+    color: rgb(36, 62, 144);
+    font-size: 1.5rem;
+    padding-top: 0px;
+    padding-bottom: 0px;
+  }
+  .home-image3 {
+    width: 313px;
+    height: 90%;
+    margin-top: var(--dl-space-space-unit);
+    margin-bottom: var(--dl-space-space-unit);
+  }
+  .home-hero3 {
+    min-height: var(--dl-size-size-medium);
+    padding-top: var(--dl-space-space-twounits);
+    padding-left: var(--dl-space-space-unit);
+    padding-right: var(--dl-space-space-unit);
+    padding-bottom: var(--dl-space-space-twounits);
+  }
+  .home-container4 {
+    margin: var(--dl-space-space-unit);
+    padding: var(--dl-space-space-unit);
+  }
+  .home-text3 {
+    color: rgb(36, 62, 144);
+    font-size: 1.5rem;
+    padding-top: 0px;
+    padding-bottom: 0px;
+  }
+  .home-image4 {
+    width: 313px;
+    height: 90%;
+    margin-top: var(--dl-space-space-unit);
+    margin-bottom: var(--dl-space-space-unit);
+  }
   .home-footer {
     height: 71px;
     padding: var(--dl-space-space-unit);
     flex-direction: column;
   }
-  .home-image3 {
+  .home-image5 {
     top: 0px;
     left: 0px;
     right: 0px;
