Commit from TeleportHQ

--- a/index.css
+++ b/index.css
@@ -164,6 +164,78 @@
   align-self: center;
   object-fit: cover;
 }
+.home-hero4 {
+  width: 100%;
+  display: flex;
+  padding: var(--dl-space-space-threeunits);
+  max-width: var(--dl-size-size-maxwidth);
+  min-height: 80vh;
+  align-items: center;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.home-container5 {
+  margin: var(--dl-space-space-unit);
+  display: flex;
+  align-self: center;
+  padding-top: var(--dl-space-space-unit);
+  border-color: #243e90;
+  border-width: 1px;
+  padding-left: var(--dl-space-space-unit);
+  padding-right: var(--dl-space-space-unit);
+  flex-direction: column;
+  padding-bottom: var(--dl-space-space-unit);
+}
+.home-text4 {
+  color: #243e90;
+  font-size: 2rem;
+  max-width: 450px;
+  align-self: center;
+}
+.home-image5 {
+  width: 80%;
+  height: 90%;
+  align-self: center;
+  object-fit: cover;
+}
+.home-hero5 {
+  width: 100%;
+  display: flex;
+  padding: var(--dl-space-space-threeunits);
+  max-width: var(--dl-size-size-maxwidth);
+  min-height: 80vh;
+  align-items: center;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.home-container6 {
+  margin: var(--dl-space-space-unit);
+  display: flex;
+  align-self: center;
+  padding-top: var(--dl-space-space-unit);
+  border-color: #243e90;
+  border-width: 1px;
+  padding-left: var(--dl-space-space-unit);
+  padding-right: var(--dl-space-space-unit);
+  flex-direction: column;
+  padding-bottom: var(--dl-space-space-unit);
+}
+.home-text5 {
+  color: #243e90;
+  font-size: 2rem;
+  max-width: 450px;
+  align-self: center;
+}
+.home-link {
+  display: contents;
+}
+.home-image6 {
+  width: 80%;
+  height: 90%;
+  align-self: center;
+  object-fit: cover;
+  text-decoration: none;
+}
 .home-footer {
   width: 100%;
   display: flex;
@@ -178,7 +250,7 @@
   padding-bottom: var(--dl-space-space-twounits);
   justify-content: space-between;
 }
-.home-image5 {
+.home-image7 {
   top: 0px;
   left: 0px;
   right: 0px;
@@ -274,6 +346,42 @@
     width: 80%;
     height: 90%;
   }
+  .home-hero4 {
+    flex-direction: column;
+  }
+  .home-container5 {
+    align-items: center;
+    margin-right: 0px;
+    margin-bottom: var(--dl-space-space-twounits);
+    padding-right: 0px;
+  }
+  .home-text4 {
+    color: #243e90;
+    font-size: 2rem;
+    text-align: center;
+  }
+  .home-image5 {
+    width: 80%;
+    height: 90%;
+  }
+  .home-hero5 {
+    flex-direction: column;
+  }
+  .home-container6 {
+    align-items: center;
+    margin-right: 0px;
+    margin-bottom: var(--dl-space-space-twounits);
+    padding-right: 0px;
+  }
+  .home-text5 {
+    color: #243e90;
+    font-size: 2rem;
+    text-align: center;
+  }
+  .home-image6 {
+    width: 80%;
+    height: 90%;
+  }
 }
 @media(max-width: 767px) {
   .home-header {
@@ -351,6 +459,40 @@
     font-size: 2rem;
   }
   .home-image4 {
+    width: 80%;
+    height: 90%;
+  }
+  .home-hero4 {
+    align-self: flex-start;
+    padding-left: var(--dl-space-space-twounits);
+    padding-right: var(--dl-space-space-twounits);
+  }
+  .home-container5 {
+    margin-right: var(--dl-space-space-unit);
+    padding-right: var(--dl-space-space-unit);
+  }
+  .home-text4 {
+    color: #243e90;
+    font-size: 2rem;
+  }
+  .home-image5 {
+    width: 80%;
+    height: 90%;
+  }
+  .home-hero5 {
+    align-self: flex-start;
+    padding-left: var(--dl-space-space-twounits);
+    padding-right: var(--dl-space-space-twounits);
+  }
+  .home-container6 {
+    margin-right: var(--dl-space-space-unit);
+    padding-right: var(--dl-space-space-unit);
+  }
+  .home-text5 {
+    color: #243e90;
+    font-size: 2rem;
+  }
+  .home-image6 {
     width: 80%;
     height: 90%;
   }
@@ -466,12 +608,58 @@
     margin-top: var(--dl-space-space-unit);
     margin-bottom: var(--dl-space-space-unit);
   }
+  .home-hero4 {
+    min-height: var(--dl-size-size-medium);
+    padding-top: var(--dl-space-space-twounits);
+    padding-left: var(--dl-space-space-unit);
+    padding-right: var(--dl-space-space-unit);
+    padding-bottom: var(--dl-space-space-twounits);
+  }
+  .home-container5 {
+    margin: var(--dl-space-space-unit);
+    padding: var(--dl-space-space-unit);
+  }
+  .home-text4 {
+    color: rgb(36, 62, 144);
+    font-size: 1.5rem;
+    padding-top: 0px;
+    padding-bottom: 0px;
+  }
+  .home-image5 {
+    width: 313px;
+    height: 90%;
+    margin-top: var(--dl-space-space-unit);
+    margin-bottom: var(--dl-space-space-unit);
+  }
+  .home-hero5 {
+    min-height: var(--dl-size-size-medium);
+    padding-top: var(--dl-space-space-twounits);
+    padding-left: var(--dl-space-space-unit);
+    padding-right: var(--dl-space-space-unit);
+    padding-bottom: var(--dl-space-space-twounits);
+  }
+  .home-container6 {
+    margin: var(--dl-space-space-unit);
+    padding: var(--dl-space-space-unit);
+  }
+  .home-text5 {
+    color: rgb(36, 62, 144);
+    font-size: 1.5rem;
+    padding-top: 0px;
+    padding-bottom: 0px;
+  }
+  .home-image6 {
+    width: 313px;
+    height: 90%;
+    margin-top: var(--dl-space-space-unit);
+    margin-bottom: var(--dl-space-space-unit);
+  }
   .home-footer {
     height: 71px;
     padding: var(--dl-space-space-unit);
     flex-direction: column;
   }
-  .home-image5 {
+  .home-image7 {
     top: 0px;
     left: 0px;
     right: 0px;
