--- a/index.css
+++ b/index.css
@@ -175,6 +175,7 @@
   justify-content: space-between;
 }
 .home-container5 {
+  width: 1063px;
   margin: var(--dl-space-space-unit);
   display: flex;
   align-self: center;
@@ -221,10 +222,13 @@
   padding-bottom: var(--dl-space-space-unit);
 }
 .home-text5 {
-  color: #243e90;
+  color: rgb(36, 62, 144);
+  width: 529px;
+  height: 73px;
   font-size: 2rem;
   max-width: 450px;
   align-self: center;
+  text-align: center;
 }
 .home-image6 {
   width: 80%;
@@ -615,6 +619,8 @@
     padding-bottom: var(--dl-space-space-twounits);
   }
   .home-container5 {
+    width: 460px;
+    height: 529px;
     margin: var(--dl-space-space-unit);
     padding: var(--dl-space-space-unit);
   }
